2016-08-18  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftdump] Hexdump composite glyf instructions too.

	* src/ftdump.c (Print_Programs): Updated.
	(Print_Bytecode): Cleaned up.

2016-08-18  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftdump] Implement hexdump of TrueType instructions.

	This is useful when searching for interesting instructions. Pushed
	values come with underscore prefix to distinguish them from actual
	opcodes.

	* src/ftdump.c (Print_Bytecode, Print_Programs): Implement this.
	(usage): New option `-p' described.
	(main): Updated.
	* src/ftdump.1: Updated.

2016-08-06  Werner Lemberg  <wl@gnu.org>

	Move Mark Leisher's `getopt' implementation to a separate file.

	We need this since `ftbench.c' now includes `unistd.h', which in
	turn declares `getopt'.

	* src/common.c, src/common.h: Move `getopt' stuff to...
	* src/mlgetopt.c, src/mlgetopt.h: ... these new files.
	Update all callers.

	* src/common.c, src/common.h: Use standard C only.
	Replace `CONST' with `const'.

	* Makefile (COMMON_OBJ): Add `mlgetopt'.

2016-08-02  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftbench.c (get_time, benchmark): Clean up timers.

2016-08-01  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftbench] Use POSIX timers when available.

	* src/ftbench.c (get_time): Use `clock_gettime' instead of obsolete
	and less accurate `gettimeofday'.
	(benchmark): Updated. 

2016-07-14  Werner Lemberg  <wl@gnu.org>

	[ftgrid] New option `-d' to give start-up design coordinates.

	This code is similar to the one from `ftmulti'.

	* src/ftgrid.c: Include `stdlib.h'.
	(GridStatusRec): Add `requested_pos' and `reqested_cnt' to hold the
	design coordinate data from the command line.
	(event_font_change): Handle them.
	(parse_cmdline): Handle option `-d'.
	(usage): Document `-d'.
	(main): Don't load named instances if we have start-up design
	coordinates.

	* src/ftgrid.1: Updated.

2016-07-14  Werner Lemberg  <wl@gnu.org>

	Prepare suppression of named instances.
